css/custom.css
html, body {
    margin: 0;
    height: 100%;
    -webkit-transform-style: preserve-3d;
    -moz-transform-style: preserve-3d;
    transform-style: preserve-3d;
}

header {
  text-align: center;
  position: relative;
  top: 30%;
}

#name {
  font-family: 'Roboto', sans-serif;
  font-size: 5.2em;
  margin: 0;
  -webkit-animation-duration: 1000ms;
  -webkit-animation-delay: 1s;
  -moz-animation-duration: 1000ms;
  -moz-animation-delay: 1s;
  animation-duration: 1000ms;
  animation-delay: 1s;
}

#desc {
  height: 1.5em;
  font-family: 'Roboto', sans-serif;
  font-size: 1.5em;
  -webkit-animation-duration: 1400ms;
  -moz-animation-duration: 1400ms;
  animation-duration: 1400ms;
}

#links {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

#links li {
    display: inline;
}

#links li a {
  color: black;
  text-decoration: none;
  font-size: 1.2em;
  font-family: 'Roboto', sans-serif;
  margin: 10px;
}

#links li a:hover {
    color: #337ab7;
}

.hvr-grow {
    display: inline-block;
    transform: translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    transition-duration: 0.3s;
    transition-property: transform;
}

.hvr-grow:hover,
.hvr-grow:focus,
.hvr-grow:active {
    transform: scale(1.2);
}

.hidden {
  visibility: hidden;
}

.particles {
  position: relative;
  height: 35%;
  top: 35%;
}

@media only screen and (orientation: portrait) {
  #name {
    font-size: 7em;
  }

  #desc {
    font-size: 2.7em;
    margin: 1em;
    text-align: center;
  }

  #links{
    font-size: 2.4em;
  }
}

